Adding a Main function to debug topics easily. Using the not-deprecated outForMessage